test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 05 Aug 2025 05:15:13 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="5b/PzJcLrD/3j04if3EnBpFKFszY9haK", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}